# videomemory

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml  setup.sh
.claude/skills/: videomemory-setup.md
.github/workflows/: ci.yml
benchmarks/: compare_retrieval.py  results.md
docs/: architecture.md  contributing.md  deploy-prod.md  deployment.md  mcp.md  models.md
examples/: claude_desktop_config.json  codex_config.json  cursor_mcp.json  vscode_mcp.json
examples/notebooks/: walkthrough.ipynb
frontend/: next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/videos/[id]/: page.tsx
frontend/lib/: api.ts
scripts/: download_models.py
src/videomemory/: __init__.py  cli.py  config.py  deps.py  embed.py  frames.py  ingest.py  library.py  mcp_server.py  search.py  server.py  types.py  understand.py  youtube_history.py
src/videomemory/api/: app.py  safety.py
src/videomemory/audio/: transcribe.py
src/videomemory/embeddings/: bge.py
src/videomemory/exporters/: __init__.py
src/videomemory/ingest/: hash.py  metadata.py  source.py
src/videomemory/mcp/: server.py  tools.py
src/videomemory/memory/: chunks.py  entities.py  events.py  graph.py  temporal.py
src/videomemory/pipeline/: resume.py  runner.py
src/videomemory/query/: engine.py
src/videomemory/query/providers/: base.py  ollama.py  openai.py
src/videomemory/retrieval/: frame_recall.py  fuse.py  router.py  store_helpers.py  temporal_resolve.py
src/videomemory/scribe/: __init__.py  capture.py  context.py  daemon.py  digest.py  ocr.py  privacy.py  search.py  sessions.py  store.py  types.py
src/videomemory/storage/: artifacts.py  sqlite_db.py
src/videomemory/vector/: base.py  qdrant_store.py
src/videomemory/video/: extract.py  scenes.py
src/videomemory/vision/: caption.py  clip_tags.py  detect.py  ocr.py
tests/: conftest.py  test_frames.py  test_http_server.py  test_integration.py  test_library.py  test_mcp_stdio.py  test_scribe_digest.py  test_scribe_privacy.py  test_scribe_sessions.py  test_scribe_store.py  test_unit.py
tests/fixtures/: make_videos.py
tests/integration/: test_frame_recall.py  test_ocr_query.py  test_pipeline_e2e.py  test_resume.py  test_retrieval.py  test_temporal.py
tests/mcp/: test_mcp_stdio.py  test_youtube_smoke.py
