[project]
name = "videomemory"
version = "0.1.0"
description = "Video memory operating system for AI agents — MCP-native semantic temporal memory for videos"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VideoMemory contributors" }]
keywords = ["video", "memory", "mcp", "llm", "ai-agents", "rag", "multimodal", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "aiofiles>=24.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Storage
    "aiosqlite>=0.20",
    # Video / image
    "opencv-python-headless>=4.9",
    "scenedetect[opencv-headless]>=0.6.4",
    "yt-dlp>=2025.4.30",
    "numpy>=1.26,<2.3",
    "imagehash>=4.3",
    "pillow>=10.3",
    # Graph
    "networkx>=3.3",
    # Token counting
    "tiktoken>=0.7",
    # Embeddings (light)
    "sentence-transformers>=3.0",
    # Vector store
    "qdrant-client>=1.10",
    # Web / API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    # MCP
    "mcp>=1.0",
]

[project.optional-dependencies]
ml = [
    # Torch (MPS-capable on Apple Silicon)
    "torch>=2.3",
    "torchvision>=0.18",
    # Transcription (CTranslate2-backed, ARM-friendly)
    "faster-whisper>=1.0",
    # CLIP for zero-shot tags + image embeddings
    "open-clip-torch>=2.24",
    # OCR (ONNX, ARM-clean)
    "rapidocr-onnxruntime>=1.3",
    # Optional object detection
    "ultralytics>=8.2",
]
diarization = [
    "pyannote.audio>=3.3",
]
ollama = [
    "ollama>=0.2",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
    "types-aiofiles",
]

[project.scripts]
videomemory = "videomemory.cli:app"

[project.urls]
Homepage = "https://github.com/kathan3009/videomemory"
Repository = "https://github.com/kathan3009/videomemory"
Issues = "https://github.com/kathan3009/videomemory/issues"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "network: requires internet (YouTube download, etc.)",
    "slow: takes more than 30s",
    "gpu: requires GPU/MPS",
    "ml: requires the [ml] extras installed",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
# B008: typer/FastAPI idiom uses function calls in defaults — that's correct usage.
# UP042: keep (str, Enum) for Pydantic-friendly JSON serialization.
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
