[project]
name = "videomemory"
version = "0.2.0"
description = "The video understanding layer for Claude Code & Codex — skip to the answer in any YouTube video, search across everything you've watched"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kathan", email = "kthndesai@gmail.com" }]
keywords = ["video", "mcp", "claude-code", "codex", "youtube", "rag", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    # Storage
    "aiosqlite>=0.20",
    # Video sources
    "yt-dlp>=2025.4.30",
    # Numerics + images
    "numpy>=1.26,<2.3",
    "pillow>=10.3",
    # Token counting
    "tiktoken>=0.7",
    # Embeddings (light, ~120 MB)
    "sentence-transformers>=3.0",
    # Transcription (CTranslate2, ARM-friendly)
    "faster-whisper>=1.0",
    # Torch is a transitive of sentence-transformers + faster-whisper
    "torch>=2.3",
    # MCP
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
videomemory = "videomemory.cli:app"

[project.urls]
Homepage = "https://github.com/kathan3009/videomemory"
Repository = "https://github.com/kathan3009/videomemory"
Issues = "https://github.com/kathan3009/videomemory/issues"
Demo = "https://example.com"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "network: requires internet (YouTube download)",
    "slow: takes more than 30s",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501", "E702", "E402", "B008", "UP042", "F841"]
